Fixed some formatting on mobile

--- a/main.css
+++ b/main.css
@@ -278,7 +278,7 @@ hr {
     }
 
     .projectname {
-        font-size: 40px;
+        font-size: 36px;
     }
 }
 
